okd/okd-configuration/components/gateway-external/loadbalancer.yaml
########################################################################################################
### https://unifi.arthurvardevanyan.com/network/default/settings/policy-table?preset=port-forwarding ###
########################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: openshift.io-gateway-controller-v1
    gateway.networking.k8s.io/gateway-name: https-gateway-external
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.101.10.241"
  name: https-gateway-external-openshift-default
  namespace: openshift-ingress
spec:
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
    - appProtocol: tcp
      protocol: TCP
      name: status-port
      port: 15021
    - appProtocol: https
      protocol: TCP
      name: https
      port: 443
  selector:
    gateway.networking.k8s.io/gateway-name: https-gateway-external
  type: LoadBalancer
  loadBalancerClass: metallb.io/metallb-class
